# voyager

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  voyager_friendly.py  voyager_theme.py
.streamlit/: config.toml
data/: benchmark.jsonl  eval_summary.json
voyager/: __init__.py  benchmark.py  cli.py  config.py  tools.py
voyager/eval/: agreement.py  analysis.py  export.py  judge.py  label.py  runner.py
voyager/topologies/: __init__.py  base.py  multi_agent.py  plan_execute.py  react.py  self_reflective.py  single_shot.py
